--- a/ingredient_alternatives.csproj
+++ b/ingredient_alternatives.csproj
@@ -10,6 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
+    <PackageReference Include="Unirest-API" Version="1.0.7.6" />
   </ItemGroup>
 
 </Project>
